Bug 13180 - Messaging initialisation for CTDB does not register unique ID
Summary: Messaging initialisation for CTDB does not register unique ID
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Clustering (show other bugs)
Version: 4.7.3
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-12-07 10:28 UTC by Martin Schwenke
Modified: 2017-12-22 17:05 UTC (History)
3 users (show)

See Also:


Attachments
Patch for 4.7 (1.19 KB, patch)
2017-12-13 11:32 UTC, Volker Lendecke
martins: review+
Details
patch for 4.6 (including cherry-pick information) (1.39 KB, patch)
2017-12-18 08:47 UTC, Karolin Seeger
vl: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Schwenke 2017-12-07 10:28:38 UTC
The winbind child does not call serverid_register, so the unique id is not     registered. ctdbd_process_exists now calls CTDB_CONTROL_CHECK_PID_SRVID, which
then fails.
Comment 1 Volker Lendecke 2017-12-13 11:32:37 UTC
Created attachment 13857 [details]
Patch for 4.7

This is a 4.7 issue. Master is not affected.
Comment 2 Martin Schwenke 2017-12-13 22:47:03 UTC
Is this also a 4.6 issue?
Comment 3 Martin Schwenke 2017-12-13 22:48:40 UTC
Hi Karolin,

This is ready for 4.7.

Please don't close until we get a reply from Volker about 4.6.

Thanks...
Comment 4 Volker Lendecke 2017-12-14 10:32:43 UTC
(In reply to Martin Schwenke from comment #3)

> Please don't close until we get a reply from Volker about 4.6. 

This affects 4.6 also. Apologies for not looking in time, I had thought that because 4.7 is due today it might be more pressing and take priority to look at 4.7 first.

Sorry,

Volker
Comment 5 Volker Lendecke 2017-12-14 10:52:04 UTC
(In reply to Volker Lendecke from comment #4)
> This affects 4.6 also. Apologies for not looking in time, I had thought that
> because 4.7 is due today it might be more pressing and take priority to look
> at 4.7 first.
> 
> Sorry,
> 
> Volker

From a patch perspective the same patch that applies to 4.7 also applies to 4.6. We need to wait until it landed in v4-7-test to apply the correct cherry-picked-from tag in the patch.
Comment 6 Karolin Seeger 2017-12-15 10:19:40 UTC
(In reply to Martin Schwenke from comment #3)
Pushed to autobuild-v4-7-test.
Comment 7 Karolin Seeger 2017-12-18 08:37:45 UTC
(In reply to Karolin Seeger from comment #6)
Pushed to v4-7-test.
Comment 8 Karolin Seeger 2017-12-18 08:47:40 UTC
Created attachment 13872 [details]
patch for 4.6 (including cherry-pick information)
Comment 9 Karolin Seeger 2017-12-18 10:39:16 UTC
(In reply to Karolin Seeger from comment #8)
Pushed to autobuild-v4-6-test.
Comment 10 Karolin Seeger 2017-12-22 17:05:18 UTC
(In reply to Karolin Seeger from comment #9)
Pushed to v4-6-test.
Closing out bug report.

Thanks!